2013-05-22 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Upload dragged files.

2013-05-21 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* fileElement.h
	* fileElement.m
	* fileTable.m
	* ftpclient.m
	* localclient.m
	Give path and name accessors to FileElement, initialize it with full path when local.

2013-05-19 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* fileTable.m
	Enable and detect drag-n-drop, do not do anything yet.

2013-03-18 Riccardo Mottola <rm@gnu.org>

	* AppController.m
        Make sure the interface gets enabled after a download/uploadm even if nothing ot done.

2013-03-12 Riccardo Mottola <rm@gnu.org>

	* ftpclient.[h,m] (retrieveFile, storeFile)
	Make call synchronous instead of asynchronous, solves problem on Mac where calls to the the ftpClient class would hang after a dozen of calls.

2013-02-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.[m|h]
	* use NSApplicationTerminateReply

2013-02-21 Riccardo Mottola <rm@gnu.org>

	* AppController.m 
	Fix setting of the datasource and reload data, so that connection works after a disconnection.

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Add clear method.

	* ftpclient.m (disconnect)
	Close socket and clear status on disconnect.

	* AppController.m (disconnect)
	Clear the remote view.
	
2013-02-17 Riccardo Mottola <rm@gnu.org>

	* AppController.m (disconnect)
	Clear path menu.

2013-02-17 Riccardo Mottola <rm@gnu.org>

	* fileTable.h
	Fix memory leak.

2013-02-12 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Transition to NSInteger

2013-02-12 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Use __BSD_VISIBLE instead of freebsd check for socklen_t

2013-02-04 Riccardo Mottola <rm@gnu.org>

	* Resources/FTP.gorm
	Fix broken popup connections.

2013-02-04 Riccardo Mottola <rm@gnu.org>

	* AppController.[h,m]
	Keep connection as ivar and invalidate on closure.

2012-12-12 Riccardo Mottola <rm@gnu.org>
